--- a/.github/workflows/release-portfolio.yml
+++ b/.github/workflows/release-portfolio.yml
@@ -24,10 +24,10 @@ jobs:
           npm run build
 
       - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@4.6.1
+        uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
           branch: gh-pages # The branch the action should deploy to.
           folder: apps/my-portfolio/dist # The folder the action should deploy.
-          repository: DinhThienPhuc/dinhthienphuc.github.io # The repository the action should deploy to.
+          repository-name: DinhThienPhuc/dinhthienphuc.github.io # The repository the action should deploy to.
           clean: true # Automatically remove old files from the deployment branch
           token: ${{ secrets.PORTFOLIO_GITHUB_TOKEN }} # The GITHUB_TOKEN secret
