--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "vite": "^5.2.0",
     "vite-plugin-dts": "^3.9.1",
     "yargs": "^17.7.2",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "zustand": "^4.5.2"
   }
 }
