--- a/packages/components/icon/package.json
+++ b/packages/components/icon/package.json
@@ -28,6 +28,7 @@
   "peerDependencies": {
     "typescript": "*",
     "react": "*",
+    "clsx": "*",
     "@phantomthief-react/components.loading-ellipsis": "workspace:*",
     "@phantomthief-react/utils": "workspace:*"
   },
