--- a/packages/components/select/package.json
+++ b/packages/components/select/package.json
@@ -29,12 +29,12 @@
     "typescript": "*",
     "react": "*",
     "styled-components": "*",
-    "react-feather": "*",
     "clsx": "*",
     "@phantomthief-react/components.post-adorment": "workspace:*",
     "@phantomthief-react/components.helper-text": "workspace:*",
     "@phantomthief-react/components.label": "workspace:*",
     "@phantomthief-react/components.portal": "workspace:*",
+    "@phantomthief-react/components.icon": "workspace:*",
     "@phantomthief-react/hooks": "workspace:*",
     "@phantomthief-react/utils": "workspace:*"
   },
