--- a/packages/components/text-field/package.json
+++ b/packages/components/text-field/package.json
@@ -37,6 +37,9 @@
     "@phantomthief-react/components.helper-text": "workspace:*",
     "@phantomthief-react/components.label": "workspace:*"
   },
+  "devDependencies": {
+    "@phantomthief-react/components.icon": "workspace:*"
+  },
   "author": "@DinhThienPhuc",
   "license": "ISC",
   "description": "",
